# AIAudit

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: BLOODHOUND_GUIDE.md  Full-Documentation.md  cypher_queries.cy  report.html  sample_results.json  whatChanged.txt
docs/Example MCP Configs/: README.md  claude-desktop.json
src/: cli.rs  main.rs  mcp.rs  permissions.rs  platform.rs  redactor.rs  remediation.rs  scanner.rs
src/output/: html.rs  json.rs  mod.rs  table.rs
src/remote/: ad.rs  dcerpc.rs  executor.rs  inventory.rs  mod.rs  scm.rs  winrm.rs
src/remote/smb/: auth.rs  mod.rs  proto.rs
src/scanners/: aider.rs  amazon_q.rs  browser_sessions.rs  chatgpt.rs  claude_code.rs  claude_desktop.rs  claude_sessions.rs  cline.rs  continue_dev.rs  cursor.rs  docker.rs  envvars.rs  gemini.rs  git_credentials.rs  github_copilot.rs  huggingface.rs  json_scan.rs  jupyter.rs  line_scan.rs  lm_studio.rs  ml_platforms.rs  mod.rs  network_exposure.rs  ollama.rs  openai_cli.rs  openclaw.rs  persistent_env.rs  plain_scan.rs  powershell.rs  shell_history.rs  shell_rc.rs  util.rs  vscode_extensions.rs  windsurf.rs  yaml_scan.rs
