[package]
name = "aihound"
version = "4.0.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
zeroize = { version = "1", features = ["derive"] }
dirs = "5"
regex = "1"
rayon = "1"
colored = "2"
base64 = "0.22"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = []
remote   = ["dep:ldap3", "dep:hmac", "dep:sha2"]
kerberos = ["remote", "dep:libgssapi"]

[dependencies.hmac]
version = "0.12"
optional = true

[dependencies.sha2]
version = "0.10"
optional = true

[dependencies.ldap3]
version = "0.11"
optional = true

[dependencies.libgssapi]
version = "0.11"
optional = true

[[bin]]
name = "aihound"
path = "src/main.rs"
